# adi_gpu

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  build-vulkan-shaders.sh  build.rs  changelog.md
examples/animated/: Cargo.toml  a.out
examples/animated/res/: image.data  image.texc  square.data  square.indices  triangle.colors  triangle.data
examples/animated/src/: main.rs
examples/minimal/: Cargo.toml
examples/minimal/src/: main.rs
native/: vw.c  vw.h
src/: lib.rs  render_ops.rs
src/ali_vulkan/: ffi.rs  instance.rs  mod.rs
src/asi_vulkan/: README.md  mod.rs  types.rs
src/asi_vulkan/memory/: buffer.rs  mod.rs
src/math/: bbox.rs  frustum.rs  mod.rs  octree.rs  octree_b.rs  plane.rs  points.rs  pos.rs  vec2.rs  vec3.rs  vec4.rs
src/native_renderer/vulkan/glsl/: complex-bfrag.glsl  complex-frag.glsl  complex-nafrag.glsl  complex-vert.glsl  complex.frag  complex.vert  faded-bfrag.glsl  faded-frag.glsl  faded-vert.glsl  faded.frag  faded.vert  gradient-bfrag.glsl  gradient-frag.glsl  gradient-nafrag.glsl  gradient-vert.glsl  gradient.frag  gradient.vert  solid-bfrag.glsl  solid-frag.glsl  solid-nafrag.glsl  solid-vert.glsl  solid.frag  solid.vert  texture-bfrag.glsl  texture-frag.glsl  texture-nafrag.glsl  texture-vert.glsl  texture.frag  texture.vert  tinted-bfrag.glsl  tinted-frag.glsl  tinted-nafrag.glsl  tinted-vert.glsl  tinted.frag  tinted.vert
src/native_renderer/vulkan/res/: complex-bfrag.spv  complex-frag.spv  complex-nafrag.spv  complex-vert.spv  faded-bfrag.spv  faded-frag.spv  faded-vert.spv  gradient-bfrag.spv  gradient-frag.spv  gradient-nafrag.spv  gradient-vert.spv  solid-bfrag.spv  solid-frag.spv  solid-nafrag.spv  solid-vert.spv  texture-bfrag.spv  texture-frag.spv  texture-nafrag.spv  texture-vert.spv  tinted-bfrag.spv  tinted-frag.spv  tinted-nafrag.spv  tinted-vert.spv
src/octree/: geom.rs  mod.rs
src/renderer/: mod.rs
src/renderer/ffi/: mod.rs
src/renderer/ffi/agi/: mod.rs
src/renderer/ffi/metal/: mod.rs
src/renderer/ffi/opengl/: mod.rs
src/renderer/ffi/vulkan/: create_command_buffer.rs  create_gpu.rs  create_gpu_interface.rs  create_instance.rs  create_queue.rs  create_surface.rs  destroy.rs  ffi.rs  mod.rs  vulkan-old.rs  vulkan.rs
src/renderer/ffi/vulkan/ffi/: mod.rs  types.rs
src/renderer/ffi/willow/: mod.rs
