# Cargo.toml -- Aldaron's Device Interface / GPU
# Copyright (c) 2017-2018  Jeron A. Lau <jeron.lau@plopgrizzly.com>
# Licensed under the MIT LICENSE
#                             _        _
#                            /@\——————/@\
# .———  .                   |   o    o   |     .————      .            .
# |   | |  .———   .———   .——.     []     .——.  |      .——    ———: ———: | .   .
# |   | |  |   |  |   |  \   \   <##>   /   /  |      |   |    /    /  | |   |
# |———  |  |   |  |   |   |   ¯        ¯   |   |   -- |   |   /    /   |  \ /
# |     |  |   |  |———    |                |   |    | |   |  /    /    |   |
# |     |   ———   |       |                |    ————  |   | :——— :———  |   |
#                 |        \              /                              __/
#                           ¯————————————¯

[package]
name = "adi_gpu"
version = "0.5.0"
authors = [
	"Jeron A. Lau <jeron.lau@plopgrizzly.com>",
	"Douglas P. Lau <doug.p.lau@gmail.com>"
]

license = "MIT"
documentation = "https://docs.rs/adi_gpu"
homepage = "http://plopgrizzly.com/adi_gpu"
repository = "https://github.com/plopgrizzly/adi_gpu"

readme = "README.md"
description = "GPU interface - render graphics and do fast calculations"
keywords = ["vulkan", "graphics", "rendering", "opengl", "gpu"]
categories = ["rendering::graphics-api", "hardware-support",
	"rendering::engine", "rendering"]

exclude = [
	"examples/*", "CODE_OF_CONDUCT.md", "CONTRIBUTING.md", ".gitignore",
	"_config.yml", "ISSUE_TEMPLATE.md", "icon.png", "icon.ico"
]

[dependencies]
ami = { git = "https://github.com/PlopGrizzly/ami" }
adi_gpu_vulkan = { git = "https://github.com/PlopGrizzly/adi_gpu_vulkan" }
adi_gpu_opengl = { git = "https://github.com/PlopGrizzly/adi_gpu_opengl" }
adi_gpu_base = { git = "https://github.com/PlopGrizzly/adi_gpu_base" }

# [dependencies.asi_vulkan]
# version = "^0.2"
# default-features = true
# optional = true

# [dependencies.asi_opengl]
# path = "../asi_opengl"
## version = "^0.2"
# default-features = true
# optional = true

#[features]
#default = ["vulkan", "opengl"]
#checks = ["asi_vulkan/checks"]
#validation = ["asi_vulkan/validation"]
#vulkan = ["asi_vulkan"]
#opengl = ["asi_opengl"]
