# Aldaron's Device Interface / GPU                                             #
# Copyright (c) 2017 Plop Grizzly, Jeron Lau <jeron.lau@plopgrizzly.com>       #
# Licensed under the MIT LICENSE                                               #
#                                                                              #
# examples/animated/Cargo.toml                                                 #

[package]
name = "minimal"
version = "0.1.0"
authors = ["Jeron Aldaron Lau <jeron.lau@plopgrizzly.com>"]

[dependencies]
adi_gpu = { path = "../../" }
aci_png = "^0.5"

# Enable checks & validation
[features]
default = []#["checks", "validation"]
checks = ["adi_gpu/checks"]
validation = ["adi_gpu/validation"]
