# Aldaron's Device Interface / GPU                                             #
# Copyright (c) 2017 Plop Grizzly, Jeron Lau <jeron.lau@plopgrizzly.com>       #
# Licensed under the MIT LICENSE                                               #
#                                                                              #
# examples/minimal/Cargo.toml                                                  #

[package]
name = "minimal"
version = "0.1.0"
authors = ["Jeron Aldaron Lau <jeron.lau@plopgrizzly.tech>"]

[dependencies]
willow = { path = "../../" }
aci_png = "^0.2"

# Enable checks & validation
[features]
default = ["checks", "validation"]
checks = ["willow/checks"]
validation = ["willow/validation"]
